tests/NormalTests/paczka1/fuzzy1/10727449.err
Error in line 2: e4gImGPN A221 45,7
Error in line 13: ffwX9MQGHP A354 -3,20
Error in line 15: rDvgjxm A130 98,4
Error in line 20: S288 A354 805,4
Error in line 30: rDvgjxm A221 330,8
Error in line 38: l5BxkAJGJC A221 -2,8
